# koworker

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  FAST-PATH-PLAN.md
_doc/: 2026-03-05-unified-platform-architecture.md
_journal/: 2026-03-05.md
qml/: ChatView.qml  Main.qml  MessageDelegate.qml  SessionList.qml  SettingsDialog.qml  Theme.qml
src/: AnthropicClient.cpp  AnthropicClient.h  HistoryStore.cpp  HistoryStore.h  MessageModel.cpp  MessageModel.h  main.cpp
